# databricks-solar

./: .gitignore  README.md
volume_to_delta_a/: README.md  databricks.yml  pyproject.toml  setup.py
volume_to_delta_a/resources/: jobs.yml  jobs_notebook.yml
volume_to_delta_a/src/notebooks/: volume_to_delta_notebook.py
volume_to_delta_a/src/volume_to_delta/: __init__.py  main.py
volume_to_delta_a/tests/: __init__.py  test_main.py
volume_to_delta_b/: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt  setup.py
volume_to_delta_b/resources/: jobs.yml  jobs_notebook.yml
volume_to_delta_b/src/notebooks/: volume_to_delta_notebook.py
volume_to_delta_b/src/volume_to_delta/: __init__.py  main.py
volume_to_delta_b/tests/: __init__.py  test_main.py
volume_to_delta_c/: README.md  databricks.yml  pyproject.toml  setup.py
volume_to_delta_c/resources/: jobs.yml  jobs_notebook.yml
volume_to_delta_c/src/notebooks/: volume_to_delta_notebook.py
volume_to_delta_c/src/volume_to_delta/: __init__.py  main.py
volume_to_delta_c/tests/: __init__.py  test_main.py
