[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volume_to_delta"
version = "0.1.0"
description = "Job Databricks para leitura de volume e escrita em tabela Delta (Projeto A)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Solar Team"}
]
dependencies = [
    "pyspark>=3.4.0",
]

[project.scripts]
volume_to_delta = "volume_to_delta.main:main"

[tool.setuptools.packages.find]
where = ["src"]

